# ProPhat

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  ProPhat.jucer  Profit.jucer  README.md  sBMP4.jucer  sBMP4v2.jucer
.github/workflows/: build_and_test.yml
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: ButtonGroupComponent.cpp  ButtonGroupComponent.h  GainedOscillator.h  Helpers.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProPhatApplication.cpp  ProPhatApplication.h  ProPhatProcessor.cpp  ProPhatProcessor.h  ProPhatSynthesiser.cpp  ProPhatSynthesiser.h  ProPhatVoice.cpp  ProPhatVoice.h  ProPhatWindow.h  SineWaveVoice.cpp  SineWaveVoice.h  sBMP4.h  sBMP4LookAndFeel.cpp  sBMP4LookAndFeel.h  sBMP4Processor.cpp  sBMP4Processor.h  sBMP4Synthesiser.cpp  sBMP4Synthesiser.h  sBMP4Voice.cpp  sBMP4Voice.h
Source/DSP/: GainedOscillator.h  PhatOscillators.cpp  PhatOscillators.h  ProPhatProcessor.cpp  ProPhatProcessor.h  ProPhatSynthesiser.cpp  ProPhatSynthesiser.h  ProPhatVoice.cpp  ProPhatVoice.h
Source/UI/: ButtonGroupComponent.cpp  ButtonGroupComponent.h  PluginEditor.cpp  PluginEditor.h  ProPhatApplication.cpp  ProPhatApplication.h  ProPhatEditor.cpp  ProPhatEditor.h  ProPhatLookAndFeel.cpp  ProPhatLookAndFeel.h  ProPhatWindow.cpp  ProPhatWindow.h  SliderLabel.cpp  SliderLabel.h  SnappingSlider.cpp  SnappingSlider.h  sBMP4Editor.cpp  sBMP4Editor.h  sBMP4Label.cpp  sBMP4Label.h  sBMP4LookAndFeel.cpp  sBMP4LookAndFeel.h
Source/Utility/: Helpers.h  Macros.h
assets/images/: icon.xcf
assets/presets/: big bang  chords glitch in debug
benchmarks/: Benchmarks.cpp  Catch2Main.cpp
docs/: Doxyfile
packaging/: EULA.md  ProPhat.icns  dmg.json  installer.iss
source/DSP/: GainedOscillator.h  LockFreeSynthesiser.cpp  LockFreeSynthesiser.h  PhatEffectsCrossfadeProcessor.hpp  PhatEffectsProcessor.cpp  PhatEffectsProcessor.hpp  PhatOscillators.h  PhatVerb.h  ProPhatProcessor.cpp  ProPhatProcessor.h  ProPhatSynthesiser.h  ProPhatVoice.cpp  ProPhatVoice.h
source/UI/: ButtonGroupComponent.cpp  ButtonGroupComponent.h  ProPhatApplication.cpp  ProPhatApplication.h  ProPhatEditor.cpp  ProPhatEditor.h  ProPhatLookAndFeel.cpp  ProPhatLookAndFeel.h  ProPhatWindow.cpp  ProPhatWindow.h  SliderLabel.cpp  SliderLabel.h  SnappingSlider.cpp  SnappingSlider.h
source/Utility/: Helpers.h  Macros.h
tests/: PluginBasics.cpp  Sanitizers.cpp
tests/helpers/: test_helpers.h
zzz - bak/: .gitmodules  LICENSE.md  ProPhat.jucer  README.md
zzz - bak/Source/DSP/: GainedOscillator.h  ProPhatProcessor.cpp
zzz - bak/Source/UI/: ProPhatEditor.cpp  ProPhatEditor.h  SnappingSlider.h
zzz - bak/Source/Utility/: Helpers.h
zzz - bak/docs/: Doxyfile
zzz - bak/submodules/JUCE/: CHANGE_LIST.md
zzz - bak/submodules/JUCE/examples/Audio/: CapabilityInquiryDemo.h
zzz - bak/submodules/JUCE/examples/DemoRunner/: DemoRunner.jucer
zzz - bak/submodules/JUCE/examples/DemoRunner/Builds/MacOSX/: Info-App.plist
zzz - bak/submodules/JUCE/examples/DemoRunner/Builds/VisualStudio2017/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters  resources.rc
zzz - bak/submodules/JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
zzz - bak/submodules/JUCE/examples/DemoRunner/Builds/VisualStudio2022/: DemoRunner_App.vcxproj  DemoRunner_App.vcxproj.filters
zzz - bak/submodules/JUCE/examples/DemoRunner/Builds/iOS/: Info-App.plist
zzz - bak/submodules/JUCE/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
zzz - bak/submodules/JUCE/examples/DemoRunner/Source/UI/: MainComponent.cpp
zzz - bak/submodules/JUCE/examples/GUI/: ImagesDemo.h  WidgetsDemo.h  WindowsDemo.h
zzz - bak/submodules/JUCE/examples/Plugins/: ARAPluginDemo.h
zzz - bak/submodules/JUCE/examples/Utilities/: Box2DDemo.h
zzz - bak/submodules/JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest_App.vcxproj  AudioPerformanceTest_App.vcxproj.filters
zzz - bak/submodules/JUCE/extras/AudioPluginHost/Builds/VisualStudio2017/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
zzz - bak/submodules/JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj  AudioPluginHost_App.vcxproj.filters
zzz - bak/submodules/JUCE/extras/AudioPluginHost/Source/: HostStartup.cpp
zzz - bak/submodules/JUCE/extras/Projucer/: Projucer.jucer
zzz - bak/submodules/JUCE/extras/Projucer/JuceLibraryCode/: JuceHeader.h
zzz - bak/submodules/JUCE/modules/juce_analytics/: juce_analytics.h
zzz - bak/submodules/JUCE/modules/juce_audio_basics/native/: juce_CoreAudioLayouts_mac.h
zzz - bak/submodules/JUCE/modules/juce_audio_devices/native/: juce_CoreAudio_mac.cpp
zzz - bak/submodules/JUCE/modules/juce_audio_formats/: juce_audio_formats.h
zzz - bak/submodules/JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AU_1.mm
zzz - bak/submodules/JUCE/modules/juce_audio_processors/: juce_audio_processors.h
zzz - bak/submodules/JUCE/modules/juce_audio_utils/: juce_audio_utils.h
zzz - bak/submodules/JUCE/modules/juce_audio_utils/gui/: juce_AudioDeviceSelectorComponent.cpp
zzz - bak/submodules/JUCE/modules/juce_box2d/: juce_box2d.h
zzz - bak/submodules/JUCE/modules/juce_cryptography/: juce_cryptography.h
zzz - bak/submodules/JUCE/modules/juce_dsp/: juce_dsp.h
zzz - bak/submodules/JUCE/modules/juce_events/timers/: juce_Timer.cpp  juce_Timer.h
zzz - bak/submodules/JUCE/modules/juce_graphics/: juce_graphics.h
zzz - bak/submodules/JUCE/modules/juce_gui_basics/: juce_gui_basics.h
zzz - bak/submodules/JUCE/modules/juce_gui_basics/native/: juce_Windowing_windows.cpp
zzz - bak/submodules/JUCE/modules/juce_gui_extra/: juce_gui_extra.h
zzz - bak/submodules/JUCE/modules/juce_opengl/: juce_opengl.h
zzz - bak/submodules/JUCE/modules/juce_product_unlocking/: juce_product_unlocking.h
zzz - bak/submodules/JUCE/modules/juce_video/: juce_video.h
(+78 files in other folders)
